--- a/scss/style.scss
+++ b/scss/style.scss
@@ -63,6 +63,9 @@ header {
     flex-direction: row;
     align-items: center;
     justify-content: center;
+    position: fixed;
+    top: 0;
+    z-index: 100;
 
     ul {
         display: flex;
@@ -70,7 +73,7 @@ header {
         gap: 80px;
         list-style: none;
     }
-    
+
     a {
         color: $white;
         font-weight: bold;
@@ -109,11 +112,11 @@ header {
         justify-content: center;
         z-index: 3;
         gap: 32px;
-    
+
         h3 {
             color: $secundary-blue;
         }
-    
+
     }
 }
 
@@ -131,12 +134,12 @@ header {
     justify-content: center;
     margin-bottom: 120px;
 
-    &-content{
+    &-content {
         width: 100%;
         max-width: 1100px;
         display: flex;
         gap: 32px;
-    
+
     }
 }
 
@@ -200,44 +203,44 @@ header {
     justify-content: center;
     margin-bottom: 120px;
 
-    h2{
+    h2 {
         margin-bottom: 52px;
 
     }
 
-    &-content{
+    &-content {
         max-width: 1100px;
         color: $white;
         text-align: center;
     }
 }
 
-.gallery-section{
+.gallery-section {
     display: flex;
     justify-content: center;
     margin-bottom: 120px;
 
-    &-content{
+    &-content {
         width: 100%;
         max-width: 1100px;
     }
 
-    h2{
+    h2 {
         margin-bottom: 80px;
     }
 
-    .imgs-container{
+    .imgs-container {
         display: flex;
         flex-direction: column;
         gap: 40px;
-        
-        &-row{
+
+        &-row {
             display: flex;
             gap: 40px;
 
         }
 
-        img{
+        img {
             aspect-ratio: 16/9;
             object-fit: cover;
             flex: 1;
@@ -245,16 +248,57 @@ header {
     }
 }
 
+.slideshow {
+    width: 100%;
+    height: 100vh;
+    background-color: #00000091;
+    position: fixed;
+    top: 0;
+    left: 0;
+    justify-content: center;
+    align-items: center;
+    display: none;
+    z-index: 1000;
+
+    .img-container {
+        width: 50%;
+        min-width: 300px;
+        position: relative;
+    }
+
+    img {
+        width: 100%;
+    }
+
+    .input-group {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        display: flex;
+        justify-content: space-between;
+        height: 100%;
+
+        button {
+            background-color: transparentize($dark-blue,0.8);
+            font-size: 80px;
+        }
+    }
+}
+
+.slideshow.show {
+    display: flex;
+}
 
 
-footer{
+footer {
     background-color: $dark-blue;
     color: $white;
     display: flex;
     justify-content: center;
 }
 
-.footer-content{
+.footer-content {
     width: 100%;
     display: flex;
     align-items: center;
