--- a/styles/style.css
+++ b/styles/style.css
@@ -53,6 +53,9 @@ header {
   flex-direction: row;
   align-items: center;
   justify-content: center;
+  position: fixed;
+  top: 0;
+  z-index: 100;
 }
 header ul {
   display: flex;
@@ -212,6 +215,44 @@ header a {
   aspect-ratio: 16/9;
   object-fit: cover;
   flex: 1;
+}
+
+.slideshow {
+  width: 100%;
+  height: 100vh;
+  background-color: rgba(0, 0, 0, 0.568627451);
+  position: fixed;
+  top: 0;
+  left: 0;
+  justify-content: center;
+  align-items: center;
+  display: none;
+  z-index: 1000;
+}
+.slideshow .img-container {
+  width: 50%;
+  min-width: 300px;
+  position: relative;
+}
+.slideshow img {
+  width: 100%;
+}
+.slideshow .input-group {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  height: 100%;
+}
+.slideshow .input-group button {
+  background-color: rgba(0, 1, 56, 0.2);
+  font-size: 80px;
+}
+
+.slideshow.show {
+  display: flex;
 }
 
 footer {
